fix(adaptive): use proper constructor method for adaptive extension instantiation
Ensure `getDeclaredConstructor().newInstance()` is used for object creation to comply with modern instantiation practices.